--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@
           </ul>
         </nav>
         <address class="address">
-          <a class="header-address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a class="header-address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-address-link link" href="mailto:info@devstudio.com"
+            ><svg class="address-icon">
+              <use href="./images/svg/sprite_shapka.svg#icon-email"></use></svg
+            >info@devstudio.com
+          </a>
+          <a class="header-address-link link" href="tel:+380961111111"
+            ><svg class="address-icon"><use href="./images/svg/sprite_shapka.svg#icon-smartphone"></use></svg>+38 096 111 11 11
+          </a>
         </address>
       </div>
     </header>
