--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <address class="address">
           <a class="header-address-link link" href="mailto:info@devstudio.com"
             ><svg class="address-icon">
-              <use href="./images/svg/sprite_shapka.svg#icon-email"></use></svg
+              <use href="./images/sprite.svg#envelope"></use></svg
             >info@devstudio.com
           </a>
-          <a class="header-address-link link" href="tel:+380961111111"
-            ><svg class="address-icon"><use href="./images/svg/sprite_shapka.svg#icon-smartphone"></use></svg>+38 096 111 11 11
+          <a class="header-address-link link" href="tel:+380961111111">
+            <svg class="address-icon">
+              <use href="./images/sprite.svg#smartphone"></use></svg
+            >+38 096 111 11 11
           </a>
         </address>
       </div>
@@ -37,7 +39,7 @@
     <!--MAIN-->
     <main>
       <!--HERO-->
-      <section class="hero">
+      <section class="hero overlay">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="modal-btn" type="button">Заказать услугу</button>
@@ -48,19 +50,19 @@
         <div class="container">
           <h2 class="hidden">Наше предложение</h2>
           <ul class="advantages-list">
-            <li class="advantages-list-item list">
+            <li class="advantages-list-item list icon-aerial">
               <h3 class="advantages-list-title">Внимание к деталям</h3>
               <p class="advantages-list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
-            <li class="advantages-list-item list">
+            <li class="advantages-list-item list icon-clock">
               <h3 class="advantages-list-title">Пунктуальность</h3>
               <p class="advantages-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
-            <li class="advantages-item list">
+            <li class="advantages-list-item list icon-laptop">
               <h3 class="advantages-list-title">Планирование</h3>
               <p class="advantages-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
-            <li class="advantages-item list">
+            <li class="advantages-list-item list icon-astronaut">
               <h3 class="advantages-list-title">Современные технологии</h3>
               <p class="advantages-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -75,7 +77,7 @@
             <li class="services-list-item list">
               <img
                 class="services-list-img"
-                src="./images/activity_gallery/ag_1.jpg"
+                src="./images/services/layout.jpg"
                 alt="фронтэнд разработчик верстает страничку"
                 width="370"
                 height="294"
@@ -85,8 +87,9 @@
             <li class="services-list-item list">
               <img
                 class="services-list-img"
-                src="./images/activity_gallery/ag_2.jpg"
-                alt="Дизайнер продукта делает дизайн приложения"
+                src="./images/services/selection-app-style.jpg"
+                alt="Дизайнер продукта
+              делает дизайн приложения"
                 width="370"
                 height="294"
                 aria-label="Дизайнер продукта делает дизайн приложения"
@@ -95,7 +98,7 @@
             <li class="services-list-item list">
               <img
                 class="services-list-img"
-                src="./images/activity_gallery/ag_3.jpg"
+                src="./images/services/color-selection.jpg"
                 alt="дизайнер пользовательского интерфейса выбирает цвет"
                 width="370"
                 height="294"
@@ -111,30 +114,120 @@
           <h2 class="teamcard-title">Наша команда</h2>
           <ul class="teamcard-list">
             <li class="teamcard-list-item list">
-              <img class="teamcard-list-img" src="./images/team/t1.jpg" alt="дизайнер продукта Игорь Демьяненко" width="270" height="260" />
+              <img
+                class="teamcard-list-img"
+                src="./images/squad/Designer_of_product.jpg"
+                alt="дизайнер продукта Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
               <div class="teamcard-list-container">
                 <h3 class="teamcard-list-name">Игорь Демьяненко</h3>
                 <p class="teamcard-list-text" lang="en">Product Designer</p>
-              </div>
-            </li>
-            <li class="teamcard-list-item list">
-              <img class="teamcard-list-img" src="./images/team/t2.jpg" alt="фронтэнд разработчик Ольга Репина" width="270" height="260" />
-              <div class="teamcard-list-container">
-                <h3 class="teamcard-list-name">Ольга Репина</h3>
-                <p class="teamcard-list-text" lang="en">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="teamcard-list-item list">
-              <img class="teamcard-list-img" src="./images/team/t3.jpg" alt="маркентинг Николай Тарасов" width="270" height="260" />
-              <div class="teamcard-list-container">
-                <h3 class="teamcard-list-name">Николай Тарасов</h3>
-                <p class="teamcard-list-text" lang="en">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="teamcard-list-item list">
               <img
                 class="teamcard-list-img"
-                src="./images/team/t4.jpg"
+                src="./images/squad/Frontend_Developer.jpg"
+                alt="фронтэнд разработчик Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <div class="teamcard-list-container">
+                <h3 class="teamcard-list-name">Ольга Репина</h3>
+                <p class="teamcard-list-text" lang="en">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="teamcard-list-item list">
+              <img class="teamcard-list-img" src="./images/squad/Marketing.jpg" alt="маркентинг Николай Тарасов" width="270" height="260" />
+              <div class="teamcard-list-container">
+                <h3 class="teamcard-list-name">Николай Тарасов</h3>
+                <p class="teamcard-list-text" lang="en">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="teamcard-list-item list">
+              <img
+                class="teamcard-list-img"
+                src="./images/squad/UI_Designer.jpg"
                 alt="дизайнер пользовательского интерфейса Михаил Ермаков"
                 width="270"
                 height="260"
@@ -142,7 +235,83 @@
               <div class="teamcard-list-container">
                 <h3 class="teamcard-list-name">Михаил Ермаков</h3>
                 <p class="teamcard-list-text" lang="en">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link link" href=""
+                      ><svg class="social-icon">
+                        <use href="./images/sprite.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- CLIENTS LIST -->
+      <section class="clients section">
+        <div class="container">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-list-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon">
+                  <use href="./images/sprite.svg#client-one"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon">
+                  <use href="./images/sprite.svg#client-two"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon">
+                  <use href="./images/sprite.svg#client-three"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon">
+                  <use href="./images/sprite.svg#client-four"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon">
+                  <use href="./images/sprite.svg#client-five"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon">
+                  <use href="./images/sprite.svg#client-six"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -151,14 +320,45 @@
     <!--FOOTER-->
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html" aria-label="WebStudio"
-          ><span class="logo-web" lang="en">Web</span><span class="logo-studio-white" lang="en">Studio</span></a
-        >
-        <address class="footer-address">
-          <a class="maps link" href="https://goo.gl/maps/Md6FdoPtB2Z3rGs89" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
-          <a class="footer-mail-link link" href="mailto:info@example.com">info@example.com</a>
-          <a class="footer-tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-        </address>
+        <div class="contacts-container">
+          <a class="logo link" href="./index.html" aria-label="WebStudio"
+            ><span class="logo-web" lang="en">Web</span><span class="logo-studio-white" lang="en">Studio</span></a
+          >
+          <address class="footer-address">
+            <a class="maps link" href="https://goo.gl/maps/Md6FdoPtB2Z3rGs89" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
+            <a class="footer-mail-link link" href="mailto:info@example.com">info@example.com</a>
+            <a class="footer-tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </address>
+        </div>
+        <div class="footer-social-container">
+          <h3 class="social-list-title">присоединяйтесь</h3>
+          <ul class="social-list list">
+            <li class="social-list-item">
+              <a class="social-list-link link" href=""
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#instagram"></use></svg
+              ></a>
+            </li>
+            <li class="social-list-item">
+              <a class="social-list-link link" href=""
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#twitter"></use></svg
+              ></a>
+            </li>
+            <li class="social-list-item">
+              <a class="social-list-link link" href=""
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-list-item">
+              <a class="social-list-link link" href=""
+                ><svg class="social-icon">
+                  <use href="./images/sprite.svg#linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
