--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -52,19 +55,27 @@
           <ul class="advantages-list">
             <li class="advantages-list-item list icon-aerial">
               <h3 class="advantages-list-title">Внимание к деталям</h3>
-              <p class="advantages-list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+              <p class="advantages-list-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
             </li>
             <li class="advantages-list-item list icon-clock">
               <h3 class="advantages-list-title">Пунктуальность</h3>
-              <p class="advantages-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+              <p class="advantages-list-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
             </li>
             <li class="advantages-list-item list icon-laptop">
               <h3 class="advantages-list-title">Планирование</h3>
-              <p class="advantages-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+              <p class="advantages-list-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
             </li>
             <li class="advantages-list-item list icon-astronaut">
               <h3 class="advantages-list-title">Современные технологии</h3>
-              <p class="advantages-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+              <p class="advantages-list-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
             </li>
           </ul>
         </div>
@@ -192,7 +203,13 @@
               </div>
             </li>
             <li class="teamcard-list-item list">
-              <img class="teamcard-list-img" src="./images/squad/Marketing.jpg" alt="маркентинг Николай Тарасов" width="270" height="260" />
+              <img
+                class="teamcard-list-img"
+                src="./images/squad/Marketing.jpg"
+                alt="маркентинг Николай Тарасов"
+                width="270"
+                height="260"
+              />
               <div class="teamcard-list-container">
                 <h3 class="teamcard-list-name">Николай Тарасов</h3>
                 <p class="teamcard-list-text" lang="en">Marketing</p>
@@ -325,7 +342,9 @@
             ><span class="logo-web" lang="en">Web</span><span class="logo-studio-white" lang="en">Studio</span></a
           >
           <address class="footer-address">
-            <a class="maps link" href="https://goo.gl/maps/Md6FdoPtB2Z3rGs89" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
+            <a class="maps link" href="https://goo.gl/maps/Md6FdoPtB2Z3rGs89" target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
             <a class="footer-mail-link link" href="mailto:info@example.com">info@example.com</a>
             <a class="footer-tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </address>
