--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -54,63 +57,117 @@
           <h2 class="hidden">Projects</h2>
           <ul class="projects-list">
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/laptop.jpg" alt="ноутбук с открытым сайтом" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/laptop.jpg"
+                alt="ноутбук с открытым сайтом"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title">Технокряк</h3>
                 <p class="projects-text">Веб-сайт</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/poster.jpg" alt="Постер Новый Орлеан против Голдэн Стар" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/poster.jpg"
+                alt="Постер Новый Орлеан против Голдэн Стар"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                 <p class="projects-text">Дизайн</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/seafood.jpg" alt="эмблема ресторана" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/seafood.jpg"
+                alt="эмблема ресторана"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title">Ресторан <span lang="en">Seafood</span></h3>
                 <p class="projects-text">Приложение</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/earphones.jpg" alt="изображение черных наушников" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/earphones.jpg"
+                alt="изображение черных наушников"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title">Проект <span lang="en">Prime</span></h3>
                 <p class="projects-text">Маркетинг</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/boxes.jpg" alt="изображение двух коробочек" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/boxes.jpg"
+                alt="изображение двух коробочек"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title">Проект <span lang="en">Boxes</span></h3>
                 <p class="projects-text">Приложение</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/imac.jpg" alt=" АйМак с открытым сайтом" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/imac.jpg"
+                alt=" АйМак с открытым сайтом"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title" lang="en">Inspiration has no Borders</h3>
                 <p class="projects-text">Веб-сайт</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/magazine.jpg" alt="Журнал лимитированного издания" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/magazine.jpg"
+                alt="Журнал лимитированного издания"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title">Издание <span lang="en">Limited Edition</span></h3>
                 <p class="projects-text">Дизайн</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/lablabel.jpg" alt="этикетка проекта ЛАБ" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/lablabel.jpg"
+                alt="этикетка проекта ЛАБ"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title">Проект <span lang="en">LAB</span></h3>
                 <p class="projects-text">Маркетинг</p>
               </div>
             </li>
             <li class="projects-list-item list">
-              <img class="projects-img" src="./images/projects/macbook.jpg" alt="Макбук с рабочим сайтом" width="370" height="294" />
+              <img
+                class="projects-img"
+                src="./images/projects/macbook.jpg"
+                alt="Макбук с рабочим сайтом"
+                width="370"
+                height="294"
+              />
               <div class="projects-list-description">
                 <h3 class="projects-title" lang="en">Growing Business</h3>
                 <p class="projects-text">Приложение</p>
@@ -128,7 +185,9 @@
             ><span class="logo-web" lang="en">Web</span><span class="logo-studio-white" lang="en">Studio</span></a
           >
           <address class="footer-address">
-            <a class="maps link" href="https://goo.gl/maps/Md6FdoPtB2Z3rGs89" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
+            <a class="maps link" href="https://goo.gl/maps/Md6FdoPtB2Z3rGs89" target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
             <a class="footer-mail-link link" href="mailto:info@example.com">info@example.com</a>
             <a class="footer-tel-link link" href="tel:+380991111111">+38 099 111 11 11</a>
           </address>
